--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -109,3 +109,11 @@ margin-bottom: 30px;
     font-weight: 700;
     font-size: 20px;
 }
+/* what i do styles */
+.what-i-do{
+    margin: 130px;
+    margin-bottom: 130px;
+}
+.skill-container{
+   display: flex;
+}
